<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Radio-O Manager</string>
    <string name="unknown" translatable="false">\?</string>
    <string name="general_automatic">Automatic</string>
    <string name="general_band">Band</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_category">Category</string>
    <string name="general_categories">Categories</string>
    <string name="general_club">Club</string>
    <string name="general_close">Close</string>
    <string name="general_competitor">Competitor</string>
    <string name="general_competitors">Competitors</string>
    <string name="general_startlist">Startlist</string>
    <string name="general_controls">Controls</string>
    <string name="general_copy">Copy</string>
    <string name="general_date">Date</string>
    <string name="general_disabled">Disabled</string>
    <string name="general_display">Display</string>
    <string name="general_duplicate">Duplicate</string>
    <string name="general_finish">Finish</string>
    <string name="general_finish_time">Finish time</string>
    <string name="general_gender">Gender</string>
    <string name="general_gender_man">Man</string>
    <string name="general_gender_woman">Woman</string>
    <string name="general_index">Index</string>
    <string name="general_invalid">Invalid</string>
    <string name="general_length">Length</string>
    <string name="general_limit">Limit</string>
    <string name="general_main">Main</string>
    <string name="general_max_age">Maximal age</string>
    <string name="general_name">Name</string>
    <string name="general_ok" translatable="false">OK</string>
    <string name="general_overview">Overview</string>
    <string name="general_points">Points</string>
    <string name="general_place">Place</string>
    <string name="general_preview">Preview</string>
    <string name="general_print">Print</string>
    <string name="general_race">Race</string>
    <string name="general_readouts">Readouts</string>
    <string name="general_required">Required</string>
    <string name="general_results">Results</string>
    <string name="general_run_time">Run time</string>
    <string name="general_check_time">Check time</string>
    <string name="general_si_number">SI number</string>
    <string name="general_splits">Splits</string>
    <string name="general_start">Start</string>
    <string name="general_start_time">Start time</string>
    <string name="general_status">Status</string>
    <string name="general_type">Type</string>
    <string name="general_url" translatable="false">URL/Event Id</string>
    <string name="general_year_of_birth">Year of birth</string>
    <string name="general_exit_title">Exit app</string>
    <string name="general_exit_confirmation">Do you really want to exit the app?</string>
    <string name="general_unknown_error">Unknown error</string>
    <string name="duplicate_si_number">Duplicate SI number!</string>
    <string name="si_number_invalid_range">Invalid SI number range!</string>
    <string name="files_data">Files and data</string>
    <string name="data_type">Data type</string>
    <string name="data_format">Data format</string>
    <string name="data_import">Import</string>
    <string name="data_export">Export</string>
    <string name="data_import_data">Import data</string>
    <string name="data_import_preview_info">Number of records: %1$d</string>
    <string name="data_import_file_error">Error when opening file!</string>
    <string name="data_import_format_not_supported">Given datatype is not supported for import</string>
    <string name="data_import_invalid_line">Invalid data at line %1$d: %2$s</string>
    <string name="data_import_category_duplicate">Duplicate category names: %1$s</string>
    <string name="data_import_category_name_missing">Category name missing at line: %1$d</string>
    <string name="data_import_competitor_blank_name">Missing first/last name at line: %1$d</string>
    <string name="data_import_competitor_invalid_si">Invalid SI number at line: %1$d</string>
    <string name="data_import_competitor_duplicate_si_file">Duplicate SI number in file: %1$d</string>
    <string name="data_import_competitor_duplicate_si_race">SI number already exists in race: %1$d</string>
    <string name="data_import_competitor_duplicate_start_number_file">Duplicate start number in file: %1$d</string>
    <string name="data_import_competitor_duplicate_start_number_race">Start number already exists in race: %1$d</string>
    <string name="data_import_race_blank_name">Race name can\'t be blank!</string>
    <string name="data_import_alias_name_duplicate">Duplicate alias names: %1$s</string>
    <string name="data_import_alias_code_duplicate">Duplicate alias codes: %1$s</string>
    <string name="data_import_readout_multiple_start">Multiple start punches present at readout: %1$s</string>
    <string name="data_import_readout_multiple_finish">Multiple finish punches present at readout: %1$s</string>
    <string name="race_import_file">Import race from a file</string>
    <string name="race_import_internet">Import race from internet</string>
    <string name="race_export_success">Race exported successfully</string>
    <string name="race_import_success">Race imported successfully</string>
    <string name="race_import_failure">Failed to import race</string>
    <string name="race_toolbar_title">Races overview</string>
    <string name="race_level">Level</string>
    <string name="race_type">Race type</string>
    <string name="race_api_key">API key</string>
    <string name="race_limit_hint">Limit (min)</string>
    <string name="race_start_time_hint">Start time (hh:mm)</string>
    <string name="race_relative_start_time_hint">Relative start time (mm:ss)</string>
    <string name="race_end_confirmation">Do you really want to close the current race?</string>
    <string name="race_create">Create race</string>
    <string name="race_edit">Edit race</string>
    <string name="race_import">Import race</string>
    <string name="race_delete">Delete race</string>
    <string name="race_delete_confirmation">Do you really want to delete this race?</string>
    <string name="race_export">Export race</string>
    <string name="race_end">Close race</string>
    <string name="si_codes">SI codes</string>
    <string name="category_create_standard_categories">Create standard categories</string>
    <string name="category_alias_manage">Manage aliases</string>
    <string name="category_alias_create">Create standard aliases</string>
    <string name="no_category">No category</string>
    <string name="category_create">Create category</string>
    <string name="category_edit">Edit category</string>
    <string name="category_duplicate">Duplicate category</string>
    <string name="category_move_competitors">Move competitors</string>
    <string name="category_destination_category">Destination category</string>
    <string name="category_original_category">Original category %1$s</string>
    <string name="category_delete">Delete category</string>
    <string name="category_delete_confirmation">Do you really want to delete this category?\n%1$s</string>
    <string name="category_delete_competitors">Also delete competitors in this category</string>
    <string name="category_length_title">Length (m)</string>
    <string name="category_climb_title">Climb (m)</string>
    <string name="category_exists">Category already exists!</string>
    <string name="control_points">Control points</string>
    <string name="nonexistent_year">Invalid year</string>
    <string name="category_same_type">Same type as race</string>
    <string name="control_point_edit_hint">Input SI codes, separated by space. ! stands for spectator control (sprint only), B for beacon. Aliases are then managed in a separate dialog.</string>
    <string name="control_point_unknown_specifier"> Unknown special control specifier: %1$s</string>
    <string name="control_point_invalid_range"> Invalid SI range: %1$s. The code must be greater than 30 and less than 256 </string>
    <string name="control_point_two_in_row">" Two identical control points can't be in a row."</string>
    <string name="control_point_orienteering_special"> Orienteering can\'t contain special control points.</string>
    <string name="control_point_classic_duplicate"> Duplicate control points are not allowed in a classic race.</string>
    <string name="control_point_non_last_beacon"> Beacon must be the last control point.</string>
    <string name="control_point_classic_spectator_not_allowed"> Spectator control points are not allowed on a classic race.</string>
    <string name="control_point_sprint_duplicate"> Duplicate controls are not allowed in a single lap of a sprint race.</string>
    <string name="control_point_sprint_two_usages">" Control point with SI code [%1$d] used as a separator / beacon and as a control."</string>
    <string name="category_preset_international">International</string>
    <string name="category_preset_czech">Czech</string>
    <string name="competitor_first_name">First name</string>
    <string name="competitor_last_name">Last name</string>
    <string name="competitor_start_number">Start number</string>
    <string name="competitor_start_number_header">Start #</string>
    <string name="competitor_to_limit">To limit</string>
    <string name="competitor_create">Create competitor</string>
    <string name="competitor_edit">Edit competitor</string>
    <string name="competitor_delete">Delete competitor</string>
    <string name="competitor_delete_all">Delete all competitors</string>
    <string name="competitor_draw_start_times">Draw start times</string>
    <string name="competitor_delete_confirmation">Do you really want to delete this competitor?\n%1$s</string>
    <string name="competitor_delete_readout_data">Also delete readout data (if exist)</string>
    <string name="competitor_delete_all_confirmation">Do you really want to delete all competitors? This action CAN\'T be undone!</string>
    <string name="competitor_rent_chip">Rent chip</string>
    <string name="competitor_hint_code">Code</string>
    <string name="competitor_hint_time_format" translatable="false">HH:MM:SS</string>
    <string name="competitor_hint_day">D</string>
    <string name="competitor_hint_week">W</string>
    <string name="competitor_display_overview">Overview</string>
    <string name="competitor_display_start_list">Start list</string>
    <string name="competitor_display_finish_reached">Finish reached</string>
    <string name="competitor_display_on_the_way">On the way</string>
    <string name="competitor_display_si_rent">SI rent</string>
    <string name="startlist_overview">Startlist overview</string>
    <string name="startlist_hint_interval">Interval (mm:ss)</string>
    <string name="startlist_set_interval">Set intervals</string>
    <string name="startlist_hint_category_interval">Category interval (mm:ss)</string>
    <string name="startlist_invalid_category_interval">Category interval must be a multiple of start interval.</string>
    <string name="startlist_draw">Draw</string>
    <string name="startlist_separate_clubs">Separate competitors from the same club</string>
    <string name="startlist_space_occupied">Cannot place here: space occupied.</string>
    <string name="startlist_confirm_partial_draw_title">Partial draw confirmation</string>
    <string name="startlist_confirm_partial_draw_text">Not all categories have time window assigned. Continue?</string>
    <string name="startlist_confirm_overwrite_title">Overwrite start times?</string>
    <string name="startlist_confirm_overwrite_text">Some competitors already have assigned start times. Re-drawing will overwrite them. Continue?</string>
    <string name="startlist_draw_completed">Draw completed successfully.</string>
    <string name="global_settings">Global settings</string>
</resources>