<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="12dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/move_competitors_dialog_origin"
        style="@style/dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_original_category"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/move_competitors_dialog_category_layout"
        style="@style/dialog_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/category_destination_category"
        android:textColor="@color/black">

        <AutoCompleteTextView
            android:id="@+id/move_competitors_dialog_category"
            style="@style/dialog_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="28dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/assign_dialog_cancel"
            style="@style/dialog_ok_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/general_cancel" />

        <Button
            android:id="@+id/assign_dialog_ok"
            style="@style/dialog_ok_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_ok" />
    </LinearLayout>

</LinearLayout>