<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/internet_import_dialog_type_layout"
        style="@style/dialog_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/general_type"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/internet_import_dialog_type"
            style="@style/dialog_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:simpleItems="@array/internet_import_types" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/internet_import_dialog_apikey_layout"
        style="@style/dialog_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/race_api_key"
        app:layout_constraintTop_toBottomOf="@id/internet_import_dialog_type_layout"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/internet_import_dialog_apikey"
            style="@style/dialog_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/internet_import_dialog_error"
        style="@style/error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/internet_import_dialog_apikey_layout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/internet_import_dialog_error">

        <Button
            android:id="@+id/internet_import_dialog_cancel"
            style="@style/dialog_ok_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:text="@string/general_cancel"
            app:layout_constraintTop_toBottomOf="parent" />

        <Button
            android:id="@+id/robis_import_dialog_ok"
            style="@style/dialog_ok_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/general_ok"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>