<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/race_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.ARDFManager"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/race_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/race_toolbar"
        tools:context=".ui.races.RaceSelectionFragment"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/recycler_item_race" />

    <com.nambimobile.widgets.efab.ExpandableFabLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.nambimobile.widgets.efab.ExpandableFab
            android:id="@+id/race_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="32dp"
            app:efab_color="?attr/colorPrimary"
            app:efab_orientation="portrait" />

        <com.nambimobile.widgets.efab.FabOption
            android:id="@+id/race_fab_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_color="?attr/colorPrimary"
            app:fab_icon="@drawable/ic_add"
            app:fab_orientation="portrait"
            app:label_text="@string/race_create" />

        <com.nambimobile.widgets.efab.FabOption
            android:id="@+id/race_fab_robis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_color="?attr/colorPrimary"
            app:fab_icon="@drawable/ic_robis"
            app:fab_orientation="portrait"
            app:label_text="@string/race_import_internet" />

        <com.nambimobile.widgets.efab.FabOption
            android:id="@+id/race_fab_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_color="?attr/colorPrimary"
            app:fab_icon="@drawable/ic_import_file"
            app:fab_orientation="portrait"
            app:label_text="@string/race_import_file" />

    </com.nambimobile.widgets.efab.ExpandableFabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
